Fix menu height on mobile

--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -2681,7 +2681,7 @@ a:hover {
   .grid {
     grid-template-areas: "header" "menu" "content" "footer";
     grid-template-columns: 1fr;
-    grid-template-rows: 50px 130px 1fr 30px;
+    grid-template-rows: 50px 275px 1fr 30px;
   }
 }
 
